# go

./: Cargo.toml  Dockerfile  README.md
client/: home.html
src/: auth.rs  cli.rs  error.rs  main.rs  password.rs  routes.rs  state.rs  store.rs
templates/: base.html  index.html  login.html
