[package]
name = "go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argon2 = { version = "0.4.1", features = ["std"] }
axum = { version = "0.6.1", features = ["headers"] }
axum-macros = "0.3.0"
clap = { version = "4.0.32", features = ["derive", "color"] }
futures-util = "0.3.25"
inquire = "0.5.2"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
